Add extra sigil for a wrong answer.

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
       const regexMa = /🟧|🟩/ig;
       const regexIa = /🟦|🟨/ig;
-      const regexOa = /⬛|⬜/ig;
+      const regexOa = /⬛|⬜|🟥/ig;
 
       const replacements = [
         ['😄', '🤨', '🙁'],
